@@ -1,3 +1,7 @@
+2006-03-24  Don Allingham  <don@gramps-project.org>
+	* src/Editors/Makefile.am: added _EditRepoRef.py
+	* src/Editors/_EditRepoRef.py: Added
+
 2006-03-23  Don Allingham  <don@gramps-project.org>
 	* src/Editors/_EditFamily.py: fix arglist to save, handle add parent
 	family switching.
